# WebAutomationTool

./: BROWSER_REFACTORING_SESSION.md  DESKTOP_APP_AUTH_INTEGRATION.md  IMPLEMENTATION_PROGRESS.md  MULTI_BROWSER_IMPLEMENTATION_SUMMARY.md  PROJECT_DOCUMENTATION.md  README.md  config.json  config.py  main.py  pyproject.toml  test_browser_detection.py  test_browser_reuse.py  test_toggle.py  theme_editor.py
backend/: .env.example  .gitignore  README.md  config.py  database.py  main.py  requirements.txt
backend/api/: __init__.py  auth.py  subscription.py
backend/docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  SETUP.md
backend/migrations/: 001_initial_schema.sql
backend/models/: __init__.py  schemas.py
components/: main_content.py  sidebar.py
config/: custom_theme.json  testinmg themes.json  user_preferences.json
custom_tkinter_scheme_builder/: theme_builder.py
docs/: ADR-013-Multi-Browser-Architecture.md  ARCHITECTURE_DECISIONS.md  ARCHITECTURE_GUIDE.md  BEHAVIORAL_SPECIFICATION.md  CROSS_SERVICE_ARCHITECTURE.md  DATATABLE_THEME_FIX.md  DEVELOPMENT_PROGRESS.md  DOCUMENTATION_REORGANIZATION.md  IMPLEMENTATION_STATUS.md  LAUNCHER_ARCHITECTURE.md  MIGRATION_PROGRESS.md  MODUS_OPERANDI.md  MULTI_BROWSER_TEST_CASES.md  PROJECT_DOCUMENTATION.md  PROJECT_OVERVIEW.md  README.md  TECHNICAL_REFERENCE.md  TESTING_CHECKLIST.md
launcher/: __init__.py  launcher.py
launcher/ui/: __init__.py  (+1 more)
pages/: subscription.py  task_execution.py  task_management.py  test_page.py
src/: __init__.py  app_services.py  main.py  types.py
tasks/: maciek_test.json
ui/: main_layout.py
(+98 files in other folders)
