[project]
name = "web-automation-tool"
version = "0.1.0"
description = "Desktop application for automating repetitive browser tasks"
authors = [
    {name = "Your Name",email = "your.email@example.com"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "pyqt6 (>=6.10.1,<7.0.0)",
    "playwright (>=1.57.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
